// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Execution executes a complex multi mutation request 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: The "create" operation is not implemented, yet.],
  ],
}
`;

exports[`Execution executes a complex multi query request 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: The "find" operation is not implemented, yet.],
    [GraphQLError: The "find" operation is not implemented, yet.],
    [GraphQLError: The "find" operation is not implemented, yet.],
    [GraphQLError: The "find" operation is not implemented, yet.],
    [GraphQLError: The "find" operation is not implemented, yet.],
    [GraphQLError: The "find" operation is not implemented, yet.],
    [GraphQLError: The "count" operation is not implemented, yet.],
  ],
}
`;
